# aderite-glad

./: CMakeLists.txt  README.md
debug/include/glad/: glad.h
debug/src/: glad.c
release/include/glad/: glad.h
release/src/: glad.c
